@@ -15,7 +15,10 @@ if (!$_EXTCONF['enable.']['renderFCEHeader']) {
 if(t3lib_div::int_from_ver(TYPO3_version) >= 4003000) {
 		//sectionIndex replacement
 	$tvSetup[] = 'tt_content.menu.20.3 = USER
-	tt_content.menu.20.3.userFunc = tx_templavoila_pi1->tvSectionIndex';
+	tt_content.menu.20.3.userFunc = tx_templavoila_pi1->tvSectionIndex
+	tt_content.menu.20.3.select.where >
+	tt_content.menu.20.3.indexField.data = register:tx_templavoila_pi1.current_field
+	';
 }
 
 t3lib_extMgm::addTypoScript($_EXTKEY,'setup',implode(PHP_EOL, $tvSetup), 43);
