@@ -1,5 +1,6 @@
 2011-02-22 Tolleiv Nietsch <nietsch@aoemedia.de> 
 
+	* Fixed bug: #16184: Section Index menu doesn't work with Templavoila (Thanks to Riccardo De Contardi)
 	* Fixed bug: #17696: Icon image tag with doubled alt attribute (and no title) 
 
 2011-02-18 Tolleiv Nietsch <nietsch@aoemedia.de> 
